Add '25w20a' sources